{
  "version": 4,
  "terraform_version": "0.12.9",
  "serial": 563,
  "lineage": "98076448-aa74-dabf-32f1-f5c808d95118",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-traffic-to-data-services",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "5432",
                  "27017",
                  "6379"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2019-10-07T14:43:54.916-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "id": "allow-traffic-to-data-services",
            "name": "allow-traffic-to-data-services",
            "network": "https://www.googleapis.com/compute/v1/projects/simplybankingversion2/global/networks/default",
            "priority": 1000,
            "project": "simplybankingversion2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/simplybankingversion2/global/firewalls/allow-traffic-to-data-services",
            "source_ranges": [],
            "source_service_accounts": [],
            "source_tags": [
              "api"
            ],
            "target_service_accounts": [],
            "target_tags": [
              "data-services"
            ],
            "timeouts": null
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-traffic-to-http-servers",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2019-10-07T14:43:54.888-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "id": "allow-traffic-to-http-servers",
            "name": "allow-traffic-to-http-servers",
            "network": "https://www.googleapis.com/compute/v1/projects/simplybankingversion2/global/networks/default",
            "priority": 1000,
            "project": "simplybankingversion2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/simplybankingversion2/global/firewalls/allow-traffic-to-http-servers",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "http-server"
            ],
            "timeouts": null
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "simplybanking-data-services",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "allow_stopping_for_update": true,
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-9-stretch-v20190916",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/simplybankingversion2/zones/southamerica-east1-b/disks/simplybanking-data-services"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "deletion_protection": false,
            "id": "simplybanking-data-services",
            "instance_id": "366531720968015731",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n1-standard-1",
            "metadata_fingerprint": "w72liww7a74=",
            "metadata_startup_script": "  apt-get update;\n  apt-get install -yq apt-transport-https ca-certificates curl gnupg2 software-properties-common;\n  curl -fsSL https://download.docker.com/linux/debian/gpg | sudo apt-key add -;\n  add-apt-repository \"deb [arch=amd64] https://download.docker.com/linux/debian $(lsb_release -cs) stable\"\n  apt-get update\n  apt-cache policy docker-ce\n  apt-get install -yq docker-ce\n  docker run -d -p 5432:5432 --name=simplybanking_postgres -e POSTGRES [...]
            "name": "simplybanking-data-services",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.95.235.227",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/simplybankingversion2/global/networks/default",
                "network_ip": "10.158.15.214",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/simplybankingversion2/regions/southamerica-east1/subnetworks/default",
                "subnetwork_project": "simplybankingversion2"
              }
            ],
            "project": "simplybankingversion2",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/simplybankingversion2/zones/southamerica-east1-b/instances/simplybanking-data-services",
            "service_account": [
              {
                "email": "66600631603-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "tags": [
              "data-services"
            ],
            "tags_fingerprint": "ViE_5CQn4Uk=",
            "zone": "southamerica-east1-b"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "transaction-processor",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "allow_stopping_for_update": true,
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-9-stretch-v20190916",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/simplybankingversion2/zones/southamerica-east1-b/disks/simplybanking-transaction-processor"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "deletion_protection": false,
            "id": "simplybanking-transaction-processor",
            "instance_id": "222936408618569588",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "f1-micro",
            "metadata_fingerprint": "OC4H42rcSYs=",
            "name": "simplybanking-transaction-processor",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.95.193.122",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/simplybankingversion2/global/networks/default",
                "network_ip": "10.158.15.212",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/simplybankingversion2/regions/southamerica-east1/subnetworks/default",
                "subnetwork_project": "simplybankingversion2"
              }
            ],
            "project": "simplybankingversion2",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/simplybankingversion2/zones/southamerica-east1-b/instances/simplybanking-transaction-processor",
            "service_account": [
              {
                "email": "66600631603-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "tags": [
              "api"
            ],
            "tags_fingerprint": "qKYq7cjBR-k=",
            "zone": "southamerica-east1-b"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "transaction-ui",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "allow_stopping_for_update": true,
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-9-stretch-v20190916",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/simplybankingversion2/zones/southamerica-east1-b/disks/simplybanking-ui"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "deletion_protection": false,
            "id": "simplybanking-ui",
            "instance_id": "8417803639396372339",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "f1-micro",
            "metadata_fingerprint": "7LtRtydCxkc=",
            "metadata_startup_script": "  gsutil cp gs://simplybanking-artifact-store-bucket/ui.tar.gz .;\n  tar -xvzf ui.tar.gz;\n  apt-get update;\n  apt-get install -yq apache2;\n  cp -R simplybanking-ui/* /var/www/html/\n",
            "name": "simplybanking-ui",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.95.198.157",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/simplybankingversion2/global/networks/default",
                "network_ip": "10.158.15.213",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/simplybankingversion2/regions/southamerica-east1/subnetworks/default",
                "subnetwork_project": "simplybankingversion2"
              }
            ],
            "project": "simplybankingversion2",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/simplybankingversion2/zones/southamerica-east1-b/instances/simplybanking-ui",
            "service_account": [
              {
                "email": "66600631603-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "tags": [
              "http-server",
              "ui"
            ],
            "tags_fingerprint": "vUmkTDKr_d8=",
            "zone": "southamerica-east1-b"
          }
        }
      ]
    }
  ]
}